--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-socket.io": "^7.4.4",
     "@nestjs/swagger": "^4.6.1",
+    "@nestjs/websockets": "^7.4.4",
+    "@types/socket.io": "^2.1.11",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
