--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
-    "mongoose": "^5.10.8",
+    "mongoose": "^5.10.9",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -56,9 +56,9 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
-    "@types/mongodb": "^3.5.27",
+    "@types/mongodb": "^3.5.28",
     "@types/mongoose": "^5.7.36",
-    "@types/node": "^13.9.1",
+    "@types/node": "^13.13.26",
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
@@ -66,9 +66,14 @@
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
     "eslint": "7.7.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-local": "^1.0.0",
+    "husky": "^4.3.0",
     "jest": "26.4.2",
+    "lint-staged": "^10.4.2",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
